src/objects/SFDC_Employee__c.object
<CustomObject>
    <fields>
        <fullName>ABSO__c</fullName>
        <label>Background Check on File</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Education__c</fullName>
        <label>Additional Education</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Floor((today()- DOB__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Salary_in_USD__c</fullName>
        <formula>Salary__c / Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Salary in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_Will_Employment_Agreement__c</fullName>
        <inlineHelpText>What type of employment agreement has been signed?</inlineHelpText>
        <label>Employment Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Employment Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At-Will agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Description__c</fullName>
        <label>BU Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_location__c</fullName>
        <label>Base Location</label>
        <picklist>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BizDev__c</fullName>
        <label>BizDev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group (if known)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Potential__c</fullName>
        <formula>Salary__c  *  0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus (Potential)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COL_Location__c</fullName>
        <inlineHelpText>Select the location used for payscale COL calculations</inlineHelpText>
        <label>COL Location</label>
        <picklist>
            <picklistValues>
                <fullName>Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boynton Beach, FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington, NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calgary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dakar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lancaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lusaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maputo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montreal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nairobi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wethersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yangon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Palm Beach, FL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Citizenship_2__c</fullName>
        <label>Citizenship 2</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iceland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iceland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class that an individual Employee is working for</description>
        <inlineHelpText>Class that an individual Employee is working for</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consented_to_share_salary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the employee given written consent for Dimagi to share his or her salary information externally (e.g. to a new employer doing a background check)?</inlineHelpText>
        <label>Consented to Share Salary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corp_Photo__c</fullName>
        <formula>IMAGE(&quot;http://www.salesforceius.com/appx/staffpix/&quot;&amp;  JPG__c , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Visa__c</fullName>
        <label>Country of Visa</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Local Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_City__c</fullName>
        <label>Current Address City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Country__c</fullName>
        <label>Current Address Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_State__c</fullName>
        <label>Current Address State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Street__c</fullName>
        <label>Current Address Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Zip_Postal_Code__c</fullName>
        <label>Current Address Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLAC__c</fullName>
        <label>DLAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMoz__c</fullName>
        <label>DMoz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSA__c</fullName>
        <label>DSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <label>DSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA__c</fullName>
        <label>DWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Policy_Expiry__c</fullName>
        <label>Date of Policy Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Employed__c</fullName>
        <formula>IF(Termination_Date__c != null, 
Termination_Date__c - Hire_Date__c, 
TODAY() - Hire_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_Terminal__c</fullName>
        <label>Desk Terminal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimagi_Extension__c</fullName>
        <label>Office Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Cost__c</fullName>
        <label>Direct Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Manager</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Manager__c</fullName>
        <label>Direct Manager SF ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distinguishing_Features__c</fullName>
        <label>Distinguishing Features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMERGENCY_CONTACT__c</fullName>
        <label>EMERGENCY CONTACT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMP_ID__c</fullName>
        <label>EMP ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Degrees</label>
        <picklist>
            <picklistValues>
                <fullName>HS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Effective_Exchange_Rate_Date__c</fullName>
        <label>Effective Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Salary_Date__c</fullName>
        <label>Effective Salary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_for_re_hire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Would you hire this employee again?</description>
        <label>Eligible for re-hire?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Dimagi Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Country_of_Residence__c</fullName>
        <label>Emergency Contact Country of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Britain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haiti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iceland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Significant Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_next_of_kin__c</fullName>
        <label>Emergency Contact next of kin?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Fax__c</fullName>
        <label>Employee Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Folder_Dropbox_Location__c</fullName>
        <label>Employee Folder Dropbox Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>Emp ID for charting</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Middle_Name__c</fullName>
        <label>Employee Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Contractor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Dimagi, INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimagi Software Innovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimagi South Africa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Caucasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afican-American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate (Local:USD)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Termination_Date__c</fullName>
        <label>Expected Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eye_Colour__c</fullName>
        <label>Eye Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTE_Percentage__c</fullName>
        <description>Hours per pay period / 40</description>
        <formula>Per_Week_Hours__c / 40</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_Withholding__c</fullName>
        <label>Federal Tax Withholding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Location__c</fullName>
        <label>Field Location</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer_1__c</fullName>
        <label>Former Employer 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer_3__c</fullName>
        <label>Former Employer 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer__c</fullName>
        <label>Former Employer 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fringe_Loaded_Daily_Rate__c</fullName>
        <description>Annual Salary over 260 working days, with 32% Fringe</description>
        <formula>(Annual_Salary_in_USD__c / (260* Per_Week_Hours__c /40))*(1+0.32)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Salary over 260 working days, with 32% Fringe</inlineHelpText>
        <label>Fringe Loaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Functional_Team__c</fullName>
        <label>Functional Team</label>
        <picklist>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BizOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Mkting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>